--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -22,27 +22,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Textbooks and Reading Materials
 
 
-### Weekly Schedule of Topics, Assignments, and Readings (option 1)
+### Weekly [Schedule](./schedule.html) 
 
-+-----------+----------------+--------------------+------------------+
-| Week      | Topics         | Readings           | Assignments Due  |
-+-----------+----------------+--------------------+------------------+
-| Week 1    | Introduction   | * Text1 p.1-15       | Assignment 1     |
-|           |                | * Text2 p.1-9        |                  |
-+-----------+----------------+--------------------+------------------+
-
-### Weekly Schedule of Topics, Assignments, and Readings (option 2)
-
-#### Week 1  
-
-Topics: 
-
-Readings:  
-
- * Text1 p.1-15    
- * Text2 p.1-9 
-
-Assignments Due:    
 
 ### Grading Components and Criteria 
 
