--- a/slides/EDUC641_2_categ_1.Rmd
+++ b/slides/EDUC641_2_categ_1.Rmd
@@ -53,7 +53,7 @@ options(knitr.table.format = "html")
 # Roadmap
 
 ```{r, out.width = "80%", echo=F}
-  include_graphics("roadmap_1.png")
+  include_graphics(here("slides/Roadmap_1.png"))
 ```
 
 <span style="color:blue"> *This unit borrows heavily (with permission) from John B. Willett's course S-010Y* </span>
@@ -76,7 +76,7 @@ options(knitr.table.format = "html")
 ]
 .pull-right[
 ```{r, echo=F}
-include_graphics("mccleskey.png")
+include_graphics(here("slides/mccleskey.png"))
 ```
 - Baldus, Pulaski & Woodworth (1983). A comparative review of death sentences: An empirical study of the Georgia experience. *J. Crim Law.*
 
