--- a/slides/EDUC641_2_categ_2.Rmd
+++ b/slides/EDUC641_2_categ_2.Rmd
@@ -53,7 +53,7 @@ options(knitr.table.format = "html")
 # Roadmap
 
 ```{r, out.width = "90%", echo=F}
-  include_graphics(here("slides/Roadmap_2.png"))
+  include_graphics("Roadmap_2.png")
 ```
                                                           
 ---
