--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -18,7 +18,7 @@ Topic: Introduction to scientific principles and data analysis
 
 Readings: TBD
 
-Lecture slides: [html file](.slides/EDUC641_1_intro.html)
+Lecture slides: [html file](./slides/EDUC641_1_intro.html)
 
 ### Week 2 
 
