--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -9,12 +9,13 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
 ### Week 1
 
 Topic: Introduction to scientific principles and data analysis
 
-- Describe goals of course and principles of scientific research
-- Install statistical software
+ * Describe goals of course and principles of scientific research
+ * Install statistical software
 
 Readings: TBD
 
@@ -28,14 +29,14 @@ Topic: Summarizing and displaying categorical data
 
 Objectives:
 
-- Understand and implement principles of tabular data in R
-- Describe and summarize quantitative data that are categorical
-- Create visualizations of quantitative data that are categorical
-- Write R scripts to conduct these analyses
+ * Understand and implement principles of tabular data in R
+ * Describe and summarize quantitative data that are categorical
+ * Create visualizations of quantitative data that are categorical
+ * Write R scripts to conduct these analyses
 
 Readings: TBD
 
-Assignment: Due TBD; [html file](./assignments/assignment01.html)
+Assignment: Due TBD; [html file](./assignments/assignment01.html), [dataset](./data/cat.csv)
 
 Lecture slides: [html file](./slides/EDUC641_2_categ_1.html)
 
@@ -51,16 +52,16 @@ Topic: Examining the relationship between categorical variables
 
 Objectives:
 
-- Describe relationships between quantitative data that are categorical
-- Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ( $\chi^2$) statistic
-- Write R scripts to conduct these analyses
-- Formulate and describe the purpose of a null hypothesis
-- Conceptually describe the criteria to make a statistical inference from a sample to a population
-- Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic
+ * Describe relationships between quantitative data that are categorical
+ * Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ( $\chi^2$) statistic
+ * Write R scripts to conduct these analyses
+ * Formulate and describe the purpose of a null hypothesis
+ * Conceptually describe the criteria to make a statistical inference from a sample to a population
+ * Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic
 
 Readings: TBD
 
-Assignment: Due TBD; [html file](./assignments/assignment02.html)
+Assignment: Due TBD; [html file](./assignments/assignment02.html), [dataset](./data/cat.csv)
 
 Lecture slides: [html file](./slides/EDUC641_2_categ_2.html), [Rmd file](./slides/EDUC641_2_categ_2.Rmd)
 
@@ -72,16 +73,16 @@ Topic: Summarizing and displaying continuous data
 
 Objectives:
 
-- Describe the purpose and compute the following measures of central tendency: mean, median and mode
-- Describe and summarize quantitative data that are continuous
-  + Includes computing the following measures of variability: quartiles, percentiles, inter-quartile range, range, variance and standard deviation
-  + Additionally describe conceptually principles of skewness and kurtosis
-- Create visualizations of quantitative data that are continuous
-  + Includes constructing stem-and-leaf, box- and violin-plots
-- Describe special features of a normal distribution
-- Describe distribution of repeated sample statistics drawn from a population and how this is informative to hypothesis testing
-- Apply CLT to understand whether mean value of a variable is different than a defined population value (when provided the SD of the variable)
-  + Includes conducting single-sample t-test
+ * Describe the purpose and compute the following measures of central tendency: mean, median and mode
+ * Describe and summarize quantitative data that are continuous
+    + Includes computing the following measures of variability: quartiles, percentiles, inter-quartile range, range, variance and standard deviation
+    + Additionally describe conceptually principles of skewness and kurtosis
+ * Create visualizations of quantitative data that are continuous
+    + Includes constructing stem-and-leaf, box- and violin-plots
+ * Describe special features of a normal distribution
+ * Describe distribution of repeated sample statistics drawn from a population and how this is informative to hypothesis testing
+ * Apply CLT to understand whether mean value of a variable is different than a defined population value (when provided the SD of the variable)
+   + Includes conducting single-sample t-test
 
 ### Weeks 7 - 9
 
