--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -10,27 +10,33 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### 1. Introduction
+### 1. General Guidelines
 
-(from syllabus)
+The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.
 
-(My suggestion is that responses identical to other people's words will result a warning for the first time, then zero point if this happens again; another suggestion is that we want to make sure that students render their html/pdf from Rmd/R file, so if not, cut some points. These may seem harsh in the beginning but will make sure student writing "runnable" codes as well as their own answers - two things that are fundamental to their success in later weeks)
+(Here we need to add more details about global expectations and requirements for all the assignments, grading and points distribution for participation, five assignments, and/or final project/exam, late submission policy, etc. from syllabus.)
 
-### 2. Submission Requirments
+### 2. Submission Requirements
 
-For each assignment, please upload below two files on Canvas before deadline:  
+Please upload below two files on Canvas before TBD time:  
 
  * An .html or .pdf file that includes both - 
    + your typed responses (in your own words and not identical to anybody else's), tables, and/or figures to the problems  
-   + and the R code chunks that generated your answers (hint: in your Rmd file, set up echo = TRUE, include = TRUE)  
+   + and the R code chunks that generated your answers (hint: if you choose to compose your answers in markdown, simply set up echo = TRUE, include = TRUE in you .Rmd file)  
    
- * The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. You'll be cut TBD points if the Rmd doesn't run or render properly.
+ * The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
 
 ### 3. Details about Assignments
 
-#### 3.1. Assignment 1 
+#### 3.1. Assignment 1
 
 Categorical data 1: data structure and descriptives 
+
+Objectives of this assignment
+
+ * Describe and summarize categorical data
+
+ * Create visualizations of categorical data
 
 Deadline: TBD
 
@@ -39,6 +45,18 @@ Download: [html file](./assignments/assignment01.html)
 #### 3.2. Assignment 2 
 
 Categorical data 2: chi-square analysis
+
+Objectives of this assignment
+
+ * Describe relationships between categorical variables
+ 
+ * Calculate an index of the strength of the relationship between two categorical variables, the chi-squared ($\chi^2$) statistic
+ 
+ * Formulate and describe the purpose of a null hypothesis
+ 
+ * Conceptually describe the criteria to make a statistical inference from a sample to a population
+ 
+ * Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic
 
 Deadline: TBD
 
