--- a/assignments/assignment01.Rmd
+++ b/assignments/assignment01.Rmd
@@ -10,12 +10,12 @@ pacman::p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra)
 opts_chunk$set(include = FALSE)
 ```
 
-### 1. General Guidelines
+### General Guidelines
 
 * The purpose of this assignment is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.
 
 
-### 2. Submission Requirements
+### Submission Requirements
 
 Please upload below two files on Canvas before TBD time:  
 
@@ -25,48 +25,50 @@ Please upload below two files on Canvas before TBD time:
    
  * The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
 
-### 3. Objectives of this assignment
+### Objectives of this assignment
 
  * Describe and summarize categorical data
 
  * Create visualizations of categorical data
 
-### 4. Data Background
+### Data Background
 
 The dataset we'll be using in this assignment is drawn from the NCRECE [Teacher Professional Development Study (PDS)](https://www.icpsr.umich.edu/web/ICPSR/studies/34848) data. This professional development study was a randomized controlled evaluation of two forms of professional development (PD) - coursework (phase 1) and consultancy (phase 2) - delivered to about 490 early childhood education teachers across the nation. These PD supports aimed to improve teachers' implementation of language/literacy activities and interactions with children, as well as promote gains in children's social and academic development. 
 
-While the primary goals of the intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether this professional development intervention improved children's attendance. The next two assignments will ask you to answer just this question: did a professional development coursework and consultancy intervention improve students attendance? 
+While the primary goals of the PD intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether the PD intervention improved children's attendance. The next two assignments will ask you to answer just this question: did the coursework and consultancy PD intervention improve student attendance? 
 
-**Sample**. Our dataset is student-level data for 942 preschool children, which is the same sample used in the original Hanno and Gonzalez (2020) paper. However, since some of the information for computing absenteeism is unknown, the paper tested several approaches to compute the variable. For simplifying reason, the approach we use is one of the alternatives instead of the one used in the main paper.
+**Sample**. Our dataset is student-level data for 942 preschool children, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main paper.
 
-**Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. The remainder of the variables are as follows:
+**Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. 
+
+Details on all variables are as follows:
 
  * *childid*, the child's unique identification number.
  * *treat*, treatment condition measure, which is coded 1 if the child's teacher was in the consultancy treatment group, coded 0 if the child's teacher was in the control group.  
  * *absenteeism*, measure of chronic absenteeism, coded 1 if the child missed 10 percent or more school days and 0 if not. 
  * *cgender*, the child's gender, coded 1 for girls and 0 for boys.
 
-### 5. Assignment Details
+### Assignment Details
 
-#### 5.1. Read in the dataset
+#### 1. Read in the dataset
 
-Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the dataset from the course website then store it in the folder "data". Create an Rmd/R file in the project root directory. Then...
+Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the [cat.csv dataset](./data/cat.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. Then...
 
 
 Read the data into your R environment. You do not need to include this response in your memo; only in your code.
 
-#### 5.2. Understand the structure of the data
+#### 2. Understand the structure of the data
 
-5.2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what type is each variable, how many rows/observations, etc.) with a focus on the two key variables, *treat* and *absenteeism* (type, observations, etc.).
+2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what type is each variable, how many rows/observations, etc.) with a focus on the two key variables, *treat* and *absenteeism* (type, observations, etc.).
 
 
-5.2.2. Write your own code to transform the variables, *treat*, *absenteeism*, and *cgender* into factor and label them consistently with the data background information above. 
+2.2. Write your own code to transform the variables, *treat*, *absenteeism*, and *cgender* into factor and label them consistently with the data background information above. 
 
-#### 5.3. Describe and summarize the two key variables
+#### 3. Describe and summarize the two key variables
 
-5.3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. *Make sure to label all parts of your figure*
+3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. *Make sure to label all parts of your figure*
 
-5.3.2. How many **and what proportion** of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? *Make sure to label all parts of your figure*
+3.2. How many **and what proportion** of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? *Make sure to label all parts of your figure*
 
 
 
