--- a/assignments/assignment02.Rmd
+++ b/assignments/assignment02.Rmd
@@ -10,12 +10,12 @@ pacman::p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra)
 opts_chunk$set(include = FALSE)
 ```
 
-### 1. General Guidelines
+### General Guidelines
 
 * The purpose of this assignment is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your responses.
 
 
-### 2. Submission Requirements
+### Submission Requirements
 
 Please upload below two files on Canvas before TBD time:  
 
@@ -25,7 +25,7 @@ Please upload below two files on Canvas before TBD time:
    
  * The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
 
-### 3. Objectives of this assignment
+### Objectives of this assignment
 
  * Describe relationships between categorical variables
  
@@ -37,45 +37,47 @@ Please upload below two files on Canvas before TBD time:
  
  * Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic
 
-### 4. Data Background
+### Data Background
 
 The dataset we'll be using in this assignment is drawn from the NCRECE [Teacher Professional Development Study (PDS)](https://www.icpsr.umich.edu/web/ICPSR/studies/34848) data. This professional development study was a randomized controlled evaluation of two forms of professional development (PD) - coursework (phase 1) and consultancy (phase 2) - delivered to about 490 early childhood education teachers across the nation. These PD supports aimed to improve teachers' implementation of language/literacy activities and interactions with children, as well as promote gains in children's social and academic development. 
 
-While the primary goals of the intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether this professional development intervention improved children's attendance. The next two assignments will ask you to answer just this question: did a professional development coursework and consultancy intervention improve students attendance? 
+While the primary goals of the PD intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether the PD intervention improved children's attendance. The next two assignments will ask you to answer just this question: did the coursework and consultancy PD intervention improve student attendance? 
 
-**Sample**. Our dataset is student-level data for 942 preschool children, which is the same sample used in the original Hanno and Gonzalez (2020) paper. However, since some of the information for computing absenteeism is unknown, the paper tested several approaches to compute the variable. For simplifying reason, the approach we use is one of the alternatives instead of the one used in the main paper.
+**Sample**. Our dataset is student-level data for 942 preschool children, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main paper.
 
-**Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. The remainder of the variables are as follows:
+**Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. 
+
+Details on all variables are as follows:
 
  * *childid*, the child's unique identification number.
  * *treat*, treatment condition measure, which is coded 1 if the child's teacher was in the consultancy treatment group, coded 0 if the child's teacher was in the control group.  
  * *absenteeism*, measure of chronic absenteeism, coded 1 if the child missed 10 percent or more school days and 0 if not. 
  * *cgender*, the child's gender, coded 1 for girls and 0 for boys.
 
-### 5. Assignment Details
+### Assignment Details
 
-#### 5.1. Read in the dataset
+#### 1. Read in the dataset
 
-Open your RStudio, create a project and save it to your local. Go to the root directory of the project and create a folder named "data". Download the dataset from Canvas then store it in the folder "data". Create an Rmd/R file in the project root directory. To read the dataset into your Rmd/R file, use the code chunk below (it's important that you copy-paste the entire code):
+Open your RStudio, create a project and save it to your local. Go to the root directory of the project and create a folder named "data". Download the [cat.csv dataset](./data/cat.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. To read the dataset into your Rmd/R file, use the code chunk below (it's important that you copy-paste the entire code):
 
 ```{r, include = TRUE, warning = FALSE}
 pd <- read_csv(here::here("data", "cat.csv"), col_types = "fffnffn")
 ```
 
-#### 5.2. Observed relationship between the two key variables - *treat* and *absenteeism*
+#### 2. Observed relationship between the two key variables - *treat* and *absenteeism*
 
-5.2.1. How many students in treatment group were chronically absent? How many students in control group were chronically absent? Provide your response and create a contingency table (frequencies in cell) to demonstrate your answer.
-
-
-5.2.2. What is the percentage of chronically absent students in treatment group? Control group? Provide your response and create a contingency table (percentages in cell) to demonstrate your answer.
+2.1. How many students in treatment group were chronically absent? How many students in control group were chronically absent? Provide your response and create a contingency table (frequencies in cell) to demonstrate your answer.
 
 
-5.2.3. Create a figure to demonstrate the relationship between *treat* and *absenteeism*. Write a couple of sentences to describe what you see.
+2.2. What is the percentage of chronically absent students in treatment group? Control group? Provide your response and create a contingency table (percentages in cell) to demonstrate your answer.
 
 
-#### 5.3. Calculate the Chi-Squared statistic 
+2.3. Create a figure to demonstrate the relationship between *treat* and *absenteeism*. Write a couple of sentences to describe what you see.
 
-5.3.1. Copy-paste and run the code chunk below:
+
+#### 3. Calculate the Chi-Squared statistic 
+
+3.1. Copy-paste and run the code chunk below:
 
 ```{r, include = TRUE, message = FALSE}
 pd <- pd %>% group_by(treat) %>% mutate(sum_treat = n())
@@ -96,23 +98,23 @@ kable(pd3, format='html') %>%
 
 The table you just created demonstrates the frequencies that we would expect if there's NO relationship between *treat* and *absenteeism*.
 
-5.3.2. Calculate the Chi-Squared statistic using the tables from 4.2.1. and 4.3.1. 
+3.2. Calculate the Chi-Squared statistic using the tables from 4.2.1. and 4.3.1. 
 
 
-#### 5.4. Hypothesis testing and statistical inference
+#### 4. Hypothesis testing and statistical inference
 
-5.4.1. We are interested in whether there is relationship between *treat* and *absenteeism*. What's the null hypothesis ($H_0$) that we should test? 
-
-
-5.4.2. Use the chisq.test() function to ask R for the Pearson's Chi-squared test result. Write a short paragraph to interprete the result.
+4.1. We are interested in whether there is relationship between *treat* and *absenteeism*. What's the null hypothesis ($H_0$) that we should test? 
 
 
-#### 5.5. Sub-sample comparisons
-
-5.5.1. We are insterested in whether the relationship between *treat* and *absenteeism* differ across girls and boys. What's the null hypothesis ($H_0$) that we should test? 
+4.2. Use the chisq.test() function to ask R for the Pearson's Chi-squared test result. Write a short paragraph to interprete the result.
 
 
-5.5.2. Use the chisq.test() function to ask R for the Pearson's Chi-squared test result. Write a short paragraph to interprete the result.
+#### 5. Sub-sample comparisons
+
+5.1. We are insterested in whether the relationship between *treat* and *absenteeism* differ across girls and boys. What's the null hypothesis ($H_0$) that we should test? 
+
+
+5.2. Use the chisq.test() function to ask R for the Pearson's Chi-squared test result. Write a short paragraph to interprete the result.
 
 
 
