assignment 1 key (docx and R files)

--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -42,6 +42,8 @@ Deadline: TBD
 
 Download: [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv)
 
+Key: [doc file](./assignments/keys/assignment01_key.docx); [R script](./assignments/keys/assignment01_key.R)
+
 #### 3.2. Assignment 2 
 
 Categorical data 2: chi-square analysis
